# chartagent

./: .gitignore  README.md  pyproject.toml
docs/: awesome_design_md_reference_pack.md  chartagent_handoff_2026-04-08.md  chartagent_repo_separation_checklist.md  chartagent_repo_split_status_2026-04-08.md  chartagent_repo_target_tree.md  chartagent_theme_md_template.md  chartagent_theme_set_schema.md  chartagent_theme_set_taxonomy.md  composition_3_layer_architecture.md  pinterest_composition_preset_seeds.md  pinterest_reference_analysis_2026-04-07.md  reference_benchmark_production_policy.md
docs/chartagent_themes/: dashboard_analytical.THEME.md  editorial_outline.THEME.md  poster_editorial.THEME.md
examples/chartagent_dashboard/: dashboard_manifest.json  index.html  theme_gallery.html
examples/chartagent_dashboard/theme_docs/: broadcast_signal.THEME.md  market_technical.THEME.md  neutral_white.THEME.md
examples/clay_preview/: index.html  manifest.json
examples/smoke/: chart_task.json
scripts/: build_dashboard.sh  render_clay_3d.py  render_clay_demo.py  run_smoke.sh
src/chartagent/: __init__.py  cli.py
src/chartagent/contracts/: __init__.py  chart_task.py  dataset_schema.py
src/chartagent/design/: __init__.py  design_md_reference_pack.json  pattern_formats.py  reference_profiles.py  style_combos.py  style_resolver.py  theme_sets.py  themes.py
src/chartagent/normalizers/: __init__.py  display_simplifier.py
src/chartagent/qa/: __init__.py  (+2 more)
tests/: conftest.py  test_chartagent_cli.py  test_chartagent_dashboard.py  test_chartagent_runner.py
(+1626 files in other folders)
