[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chartagent"
version = "0.1.0"
description = "Specialist chart generation package extracted from Auto Kairos Codex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
chartagent = "chartagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chartagent*"]

[tool.setuptools.package-data]
chartagent = [
    "design/*.json",
]
